fix(ui): fix modal width on mobile, and close modal on layer click

--- a/frontend/src/styles/developers.scss
+++ b/frontend/src/styles/developers.scss
@@ -53,7 +53,9 @@
   margin: 25px 0 25px 0;
   position: relative;
   min-width: 600px;
+  max-width: 800px;
   padding-bottom: 30px;
+
   .dev-detail-header {
     background: var(--dark-accent);
     width: 100%;
@@ -76,15 +78,29 @@
   }
 }
 
-#developer-modal {
+@media screen and (max-width: 700px) {
+  #developer-modal {
+    min-width: 60%;
+    max-width: 80%;
+    height: 90vh;
+    overflow: scroll;
+
+    #developer-detail {
+      min-width: 100%;
+      max-width: 100%;
+    }
+  }
+}
+
+#developer-modal-layer {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(51, 51, 51, 0.5);
+  background: rgba(51, 51, 51, 0.2);
+  z-index: 200;
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 0;
-  left: 0;
-  z-index: 100;
 }
